bug 修复